tooling/nargo_cli/tests/snapshots/execution_success/brillig_loop_size_regression/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
brillig(inline) fn main f0 {
  b0():
    (no terminator instruction)
}
[brillig_loop_size_regression] Circuit output: 0x02
